css/stylesheet.css
body {
  box-sizing: border-box;
  background-color: #f1f1f1;
  margin: 0;
  padding: 0;
  font-family: 'Open Sans', sans-serif;
  min-width: 300px;
}

/*
--------------------------
Navbar
--------------------------
*/
.NavBar {

  background-color: #f9f9f9;
  border-bottom: solid 0.2em rgba(0,0,0,0.08);
  width: 100%;
  max-height: 5em;
}
.NavBar ul{
  overflow: hidden;
  max-width: 80%;
  margin: auto;
}

.NavBar li{
  display: inline-block;
}

.PCNavBar {
  visibility: hidden;
  height: 100%;
  float: right;
  justify-content: center;
  padding: 1em;
  border-bottom: solid 0.1em );
}

.PCNavBar a{
  font-size: 2em;
  text-align: center;
  text-decoration: none;
  color: #359b3c;
}


.PCNavBar a:hover{
  overflow: hidden;
  border-bottom: solid 0.1em #333;
  transition: 0.2s;
}


#logo {
  height: 3.5em;
  margin-top: 0.6em;
}

.hamburgerBoks{
  background-color: #f9f9f9;
  padding: 0.5em;
  position: fixed;
  right: 0;
  margin-right: 1em;
  margin-top:  1em;
  border-radius: 0.3em;
  padding-bottom: 0.2em;
}

.hamburgerLine{
  width: 2.3em;
  height: 0.45em;
  margin-bottom: 0.3em;
  background-color: #359b3c;
  border-radius: 15px;
}

.nav{
  height: 100%;
  width: 0;
  position: fixed;
  z-index: 1;
  top: 0;
  right: 0;
  background-color: #f9f9f9;
  overflow-x: hidden;
  transition: 0.2s;
  padding-top: 7em;
}

.nav a{
  padding: 0.3em;
  text-decoration: none;
  font-size: 3em;
  color: #333;
  display: block;
  transition: 0.2s;
  text-align: center;
}

.hoverFarge a:hover{
  color: #fff;
  background-color: #359b3c;
}

#closeBTN {
  position: absolute;
  top: -0.4em;
  right: 0.05em;
  font-size: 50px;
}


.burgern{
  position: relative;
  float: right;
  margin-right: 1.5em;
  margin-top:  1.5em;
  font-size: 2.3em;
  cursor: pointer;
}

ul{
  list-style-type: none;
  margin: 0;
  padding: 0;
}

/*
--------------------------
Introduction to app with hero shot and links to app download
--------------------------
*/

.heroSection {
  background-color: #9ae79e;
  background-image: linear-gradient(#d4fc79, #96e6a1);
  overflow: hidden;
}

.heroSection h2 {
  border-radius: 0.3em;
  color: #303030;
  font-size: 3em;
  text-align: center;
  padding: 1em;
  margin: 1em;
  margin: auto;
  max-width: 15em;
}

.heroImage {
  width: 10em;
  margin: auto;
}

.heroText {
  background-color: #f9f9f9;
  text-align: center;
  padding: 1em;
  font-size: 1.2em;
  border-radius: 1em 0 1em 0;
  /* border-radius: 1em; */
  margin: 2em;
}

.storeLinks  {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 0;
  margin: 0;
}

.storeLinks li {
  margin: 1em;
}

.storeLinks img {
  width: 10em;
}

/*
--------------------------
Informational card section
--------------------------
*/

#infoBoxSection {
  display: flex;
  flex-flow: row wrap;
  justify-content: center;
  align-items: stretch;
  max-width: 90em;
  margin: auto;
}

.infoBox {
  background-color: #f9f9f9;
  margin: auto;
  margin: 2em;
  border-radius: 0.5em;
  overflow: auto;
  color: #333;
  max-width: 25em;
  min-width: 18em;
}

.infoBoxTitle {
  margin: 0;
  width: 100%;
  float: left;
  color: #303030;
}

.infoBoxTitle h3 {
  background-color: #f9f9f9;
  text-align: center;
  font-size: 2em;
  margin: 0;
  padding: 0.3em;
}

.infoBoxText {
  float: right;
  margin: 1em;
  font-weight: 600;
}

.infoBoxImage {
  float: left;
  width: 100%;
  height: 10em;
  border-radius: 0.25em;
  background-image: url('../media/stockphoto.jpg');
  background-size: cover;
}

#connectWithFriends {
  background-image: url('../media/connectWithFriends.jpg');
  background-size: cover;
  background-position: bottom;
}

/*
--------------------------
WALL OF TEXT section
--------------------------
*/

.sectionSeparator {
}

.wallOfText {
  display: flex;
  justify-content: center;
  align-items: stretch;
  width: 100%;
}

.wallOfText p {
  margin: 1.5em;
  max-width: 20em;
}

.wallOfTextImage {
  margin: 1.5em;
  width: 15em;
  height: 15em;
  background-color: #17BEBB;
}

#WOTI1 {
  background-image: url('../media/stockphoto.jpg');
  background-size: cover;
  background-position: center;

}

#WOTI2 {
  background-image: url('../media/stockphoto.jpg');
  background-size: cover;
  background-position: center;
}

#WOTI3 {
  background-image: url('../media/stockphoto.jpg');
  background-size: cover;
  background-position: center;
}



#WOT1 {
  background-color: #E8F4E9;
}

#WOT2 {
  background-color: #FFF8F2;
}

#WOT3 {
  background-color: #E3E9EF;
}
/*
--------------------------
MEDIA QUERY BREAK SECTION
--------------------------
*/
@media screen and (min-width: 42em) {
  .heroText {
    width: 30em;
    margin-left: auto;
    margin-right: auto;
  }

}
/* For laptop-sized screens. Swaps menus */
@media screen and (min-width: 1400px) {
  .hamburgerBoks {
    visibility: hidden;
  }

  .PCNavBar {
    visibility: visible;
  }

  #logo {
    margin-left: 7em;
  }

  .heroText {
    max-width: 35em;
    margin-left: auto;
    margin-right: auto;
  }
}

/*
--------------------------
FOOTER
--------------------------
*/

.footer{
  background-color: #f9f9f9;
  overflow: hidden;
}

#contactInfo {
  color: #333;
  margin-left: 1em;
  font-size: 1em;
  margin-bottom: 2em;
  font-size: 1em,
}

#pil {
  display: inline-block;
  color: #359b3c;
  font-weight: bolder;
  margin-left: 50%;
  margin-top: 1em;
}

.footerContent {
  max-width: 90em;
  margin: auto;
}

.footerLinkText{
  font-size: 1em;
  text-align: center;
  font-weight: bolder;
}

.footer a {
  text-decoration: none;
  color:#359b3c;
}

.kontaktOssBoks{
    text-align: left;
    width: 5em;
    margin-left: 1em;
    margin-bottom: 0.5em;
    border-bottom: solid #333 0.12em;
}

